--- a/arch/riscv/configs/litex_rocket_defconfig
+++ b/arch/riscv/configs/litex_rocket_defconfig
@@ -105,7 +105,7 @@ CONFIG_TMPFS=y
 # CONFIG_MISC_FILESYSTEMS is not set
 CONFIG_NFS_FS=y
 # CONFIG_NFS_V2 is not set
-CONFIG_NFS_V4=y
+# CONFIG_NFS_V4=y
 CONFIG_ROOT_NFS=y
 CONFIG_NFSD=y
 CONFIG_NLS=y
