--- a/arch/riscv/configs/litex_vexriscv_defconfig
+++ b/arch/riscv/configs/litex_vexriscv_defconfig
@@ -1,6 +1,5 @@
 # Architecture
 CONFIG_ARCH_DEFCONFIG="arch/riscv/configs/defconfig"
-CONFIG_ARCH_DEFCONFIG="arch/riscv/configs/defconfig"
 CONFIG_ARCH_RV32I=y
 CONFIG_RISCV_ISA_M=y
 CONFIG_RISCV_ISA_A=y
@@ -145,6 +144,9 @@ CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS=y
 CONFIG_EXT4_FS=y
 # Filesystem
+CONFIG_BLK_DEV_LOOP=y
+CONFIG_BLK_DEV_RAM=y
+CONFIG_BLK_DEV_RAM_SIZE=8192
 CONFIG_FAT_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_MSDOS_PARTITION=y
