--- a/arch/riscv/configs/litex_vexriscv_defconfig
+++ b/arch/riscv/configs/litex_vexriscv_defconfig
@@ -5,8 +5,8 @@ CONFIG_RISCV_ISA_M=y
 CONFIG_RISCV_ISA_A=y
 CONFIG_RISCV_ISA_C=n
 CONFIG_SIFIVE_PLIC=y
-CONFIG_FPU=y
-CONFIG_SMP=y
+CONFIG_FPU=n
+CONFIG_SMP=n
 CONFIG_STRICT_KERNEL_RWX=n
 CONFIG_EFI=n
 CONFIG_HVC_RISCV_SBI=y
