--- a/arch/riscv/configs/litex_vexriscv_defconfig
+++ b/arch/riscv/configs/litex_vexriscv_defconfig
@@ -6,7 +6,7 @@ CONFIG_RISCV_ISA_A=y
 CONFIG_RISCV_ISA_C=n
 CONFIG_SIFIVE_PLIC=y
 CONFIG_FPU=n
-CONFIG_SMP=n
+CONFIG_SMP=y
 CONFIG_STRICT_KERNEL_RWX=n
 CONFIG_EFI=n
 CONFIG_HVC_RISCV_SBI=y
