--- a/arch/riscv/configs/litex_vexriscv_defconfig
+++ b/arch/riscv/configs/litex_vexriscv_defconfig
@@ -94,6 +94,7 @@ CONFIG_LITEX_LITEETH=y
 
 # NFS boot support
 # CONFIG_MISC_FILESYSTEMS is not set
+CONFIG_IP_PNP=y
 CONFIG_NFS_FS=y
 CONFIG_NFS_V4=y
 CONFIG_NFS_SWAP=y
@@ -158,7 +159,12 @@ CONFIG_NLS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
-CONFIG_TMPFS=y
+CONFIG_SECURITY=y
+CONFIG_CRYPTO=y
+CONFIG_CRYPTO_RSA=y
+CONFIG_CRYPTO_CRC32C=y
+CONFIG_CRYPTO_CRC32=y
+CONFIG_CRC16=y
 
 
 # kernel features
