--- a/arch/riscv/configs/litex_rocket_defconfig
+++ b/arch/riscv/configs/litex_rocket_defconfig
@@ -132,3 +132,8 @@ CONFIG_NFS_V4_1=y
 CONFIG_NFS_V4_2=y
 CONFIG_NFS_V4_1_MIGRATION=y
 CONFIG_ROOT_NFS=y
+# RAMDISK
+CONFIG_INITRAMFS_ROOT_UID=0
+CONFIG_INITRAMFS_ROOT_GID=0
+CONFIG_INITRAMFS_COMPRESSION_NONE=y
+CONFIG_INITRAMFS_SOURCE=n
