--- a/arch/riscv/configs/litex_rocket_defconfig
+++ b/arch/riscv/configs/litex_rocket_defconfig
@@ -115,14 +115,14 @@ CONFIG_DEBUG_INFO=y
 # 
 CONFIG_RISCV_SBI_V01=y
 # Netboot
-CONFIG_IP_PNP=y
-CONFIG_NFS_FS=y
-CONFIG_NFS_V4=y
-CONFIG_NFS_SWAP=y
-CONFIG_NFS_V4_1=y
-CONFIG_NFS_V4_2=y
-CONFIG_NFS_V4_1_MIGRATION=y
-CONFIG_ROOT_NFS=y
+#CONFIG_IP_PNP=y
+#CONFIG_NFS_FS=y
+#CONFIG_NFS_V4=y
+#CONFIG_NFS_SWAP=y
+#CONFIG_NFS_V4_1=y
+#CONFIG_NFS_V4_2=y
+#CONFIG_NFS_V4_1_MIGRATION=y
+#CONFIG_ROOT_NFS=y
 # RAMDISK
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_INITRD=y
